--- a/public/test3.html
+++ b/public/test3.html
@@ -17,41 +17,34 @@
 
   <!-- 4) Google Translate setter (no reload, flips the combo) -->
   <script>
-    function setLanguage(langPair) {
-      if (!langPair) return;
-      const [from, to] = langPair.split('|');
-      document.cookie = [
-  `googtrans=/${from}/${to}`,
-  'path=/',
-  'domain=.' + location.hostname.replace(/^www\./, '')
-].join(';');
-      const combo = document.querySelector('select.goog-te-combo');
-      if (!combo) return;
-      combo.value = to;
-      combo.dispatchEvent(new Event('change'));
-    }
-  </script>
+  function setLanguage(langPair) {
+    if (!langPair) return;
+    const [from, to] = langPair.split('|');
+    document.cookie = [
+      `googtrans=/${from}/${to}`, 
+      'path=/',
+      'domain=.' + location.hostname.replace(/^www\./, '')
+    ].join(';');
+    const combo = document.querySelector('select.goog-te-combo');
+    if (!combo) return;
+    combo.value = to;
+    combo.dispatchEvent(new Event('change'));
+  }
+</script>
 
   <!-- 5) Global CSS overrides -->
   <style>
-    body { font-family: 'Inter', sans-serif; margin: 0 !important; }
-
-    /* Hide the top “Translate” banner and inline gadget icon */
+    body { font-family: 'Inter', sans-serif; margin:0!important; }
     .goog-te-banner-frame.skiptranslate,
     body > .skiptranslate,
     .goog-logo-link,
     .goog-te-gadget-icon {
-      display: none !important;
+      display: none!important;
     }
-
-    /* Keep the actual widget select invisible but present for JS */
-    .goog-te-gadget {
-      visibility: hidden !important;
-    }
+    .goog-te-gadget { visibility: hidden!important; }
   </style>
-</head>
-
-
+  </head>
+  
 
   <body class="bg-gray-50 text-gray-800">
     <!-- hidden container for the (invisible) Google Translate engine -->
@@ -162,7 +155,7 @@
   <!-- jsPDF (if you still need it) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-  <!-- 1) Reset Google-Translate cookie to English on every load -->
+  <!-- 1) Reset Google Translate cookie back to English -->
   <script>
     document.cookie = [
       'googtrans=/en/en',
@@ -171,23 +164,23 @@
     ].join(';');
   </script>
 
-<!-- container -->
-<div id="google_translate_element"></div>
+  <!-- 2) Hidden translate container -->
+  <div id="google_translate_element" style="display:none;"></div>
 
-<!-- init function -->
-<script>
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,fr,es,de,nl,it,sv,el',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-      autoDisplay: false
-    }, 'google_translate_element');
-  }
-</script>
+  <!-- 3) Init function (must match the cb below) -->
+  <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,fr,es,de,nl,it,sv,el',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element');
+    }
+  </script>
 
-<!-- load engine -->
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <!-- 4) Load Google’s widget and call our init -->
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
 
