--- a/public/test3.html
+++ b/public/test3.html
@@ -20,39 +20,30 @@
     function setLanguage(langPair) {
       if (!langPair) return;
       const [from, to] = langPair.split('|');
-      // 1) Reset the cookie (with leading dot)
-      const domain = location.hostname.replace(/^www\./, '');
+      // force cookie for the correct domain _before_ the widget loads
       document.cookie = [
         `googtrans=/${from}/${to}`,
         'path=/',
-        `domain=.${domain}`
+        'domain=.exitmytimeshares.com'   /* <-- leading dot */
       ].join(';');
-      // 2) Re-init widget if already loaded
-      if (typeof googleTranslateElementInit === 'function') {
-        googleTranslateElementInit();
-      }
-      // 3) Flip the hidden select
+      // flip the (invisible) <select>
       const combo = document.querySelector('select.goog-te-combo');
       if (!combo) return;
       combo.value = to;
       combo.dispatchEvent(new Event('change'));
     }
-  </script> 
+  </script>
 
 <!-- 5) Global CSS overrides -->
 <style>
-  /* Hide Google’s banner & inline icons */
-  .goog-te-banner-frame.skiptranslate,
-  body > .skiptranslate,
-  .goog-logo-link,
-  .goog-te-gadget-icon {
-    display: none !important;
-  }
-  /* Keep the real <select> present but invisible */
-  .goog-te-gadget {
-    visibility: hidden !important;
-  }
-</style>
+    /* hide the Google top bar and logo */
+    .goog-te-banner-frame.skiptranslate,
+    body > .skiptranslate,
+    .goog-logo-link,
+    .goog-te-gadget-icon { display: none !important; }
+    /* keep the real <select> around but invisible */
+    .goog-te-gadget { visibility: hidden !important; }
+  </style>
   </head>
 
   <body class="bg-gray-50 text-gray-800">
@@ -166,14 +157,15 @@
 
   <!-- reset back to English BEFORE we load the widget -->
   <script>
+    // reset back to English before we load the widget
     document.cookie = [
       'googtrans=/en/en',
       'path=/',
-      'domain=' + location.hostname
+      'domain=.exitmytimeshares.com'
     ].join(';');
   </script>
 
-  <!-- B) exactly one invisible placeholder -->
+<!-- the “invisible” Translate container -->
   <div id="google_translate_element" style="display:none;"></div>
 
   <!-- C) exactly one init function -->
@@ -187,9 +179,7 @@
       }, 'google_translate_element');
     }
   </script>
-
-  <!-- load Google Translate exactly once -->
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  
 
 </body>
 </html>
