--- a/public/test3.html
+++ b/public/test3.html
@@ -16,25 +16,34 @@
     <style>[x-cloak] { display: none !important; }</style>
 
   <!-- 1) Reset back to English on every load, before the widget loads -->
-  <script>
-    document.cookie = [
-      'googtrans=/en/en',
-      'path=/',
-      'domain=.exitmytimeshares.com'   /* ← your domain, with leading dot */
-    ].join(';');
-  </script>
-
-<!-- 4) Google Translate setter: set cookie + reload -->
+<!-- 1) Reset to English before anything else -->
 <script>
+    document.cookie = 'googtrans=/en/en;domain=.exitmytimeshares.com;path=/';
+  </script>
+  
+  <!-- then only once… -->
+  <div id="google_translate_element" style="display:none"></div>
+  <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,fr,es,de,nl,it,sv,el',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element');
+    }
     function setLanguage(langPair) {
-      if (!langPair) return;
       const [from, to] = langPair.split('|');
-      // Persist the translation choice
-      document.cookie = `googtrans=/${from}/${to};path=/;domain=.exitmytimeshares.com`;
-      // Reload so the Google widget sees the new cookie
-      location.reload();
+      document.cookie = `googtrans=/${from}/${to};domain=.exitmytimeshares.com;path=/`;
+      // flip the hidden select for instant effect
+      const sel = document.querySelector('select.goog-te-combo');
+      if (sel) {
+        sel.value = to;
+        sel.dispatchEvent(new Event('change'));
+      }
     }
   </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  
 
   <!-- 5) Global CSS overrides -->
   <style>
