--- a/public/test2.html
+++ b/public/test2.html
@@ -5,23 +5,64 @@
   <link rel="icon" type="image/png" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Exitmytimeshares.com | Quaerens</title>
+
+  <!-- 1) Reset to English BEFORE anything else -->
+  <script>
+    document.cookie = 'googtrans=/en/en;domain=.exitmytimeshares.com;path=/';
+  </script>
+
+  <!-- 2) Language setter + IP auto-detect -->
+  <script>
+    function setLanguage(langPair) {
+      if (!langPair) return;
+      const [, to] = langPair.split('|');
+      const v = `/en/${to}`;
+      document.cookie = `googtrans=${v};domain=.exitmytimeshares.com;path=/`;
+      location.reload();
+    }
+    (function(){
+      if (!document.cookie.includes('googtrans=')) {
+        fetch('https://ipapi.co/json/')
+          .then(r=>r.json())
+          .then(d=>{
+            const m={FR:'fr',ES:'es',DE:'de',IT:'it',NL:'nl',SE:'sv',GR:'el'};
+            const lg=m[d.country_code]||'en';
+            document.cookie=`googtrans=/en/${lg};domain=.exitmytimeshares.com;path=/`;
+            location.reload();
+          })
+          .catch(console.error);
+      }
+    })();
+  </script>
+
+  <!-- 3) Hide Google’s banner & logo but keep the combo -->
+  <style>
+    .goog-te-banner-frame.skiptranslate,
+    body > .skiptranslate,
+    .goog-logo-link,
+    .goog-te-gadget-icon {
+      display: none !important;
+    }
+    .goog-te-gadget {
+      visibility: hidden !important;
+    }
+  </style>
+
+  <!-- Your existing fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- ✅ Add Alpine.js here -->
+  <!-- Alpine.js -->
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 
+  <!-- Your page CSS overrides -->
   <style>
     body {
       font-family: 'Inter', sans-serif;
       top: 0px !important;
       position: static !important;
     }
-  
-    html {
-      margin-top: 0 !important;
-    }
-  
+    html { margin-top: 0 !important; }
     .content-box {
       max-width: 600px;
       margin: 0 auto;
@@ -30,8 +71,7 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
-  
-    /* ✅ HIDE the Google Translate top banner */
+    /* HIDE the Google Translate top banner */
     .goog-te-banner-frame.skiptranslate,
     .goog-te-gadget-icon,
     .goog-logo-link,
@@ -39,17 +79,8 @@
     body > .skiptranslate {
       display: none !important;
     }
-  
-    .goog-te-gadget {
-      font-size: 0 !important;
-    }
-  
-    form label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: 600;
-    }
-  
+    .goog-te-gadget { font-size: 0 !important; }
+    form label { display: block; margin-top: 1rem; font-weight: 600; }
     form input,
     form select {
       width: 100%;
@@ -58,143 +89,101 @@
       border-radius: 6px;
       margin-top: 0.5rem;
     }
-  </style>  
+  </style>
+</head>
   
+<!-- 2) Language setter + IP auto-detect -->
 <script>
-  function setLanguage(langPair) {
-    if (!langPair) return;
-    const lang = langPair.split('|')[1];
-    const newLang = '/en/' + lang;
-    document.cookie = 'googtrans=' + newLang + '; path=/';
-    document.cookie = 'googtrans=' + newLang + '; domain=' + window.location.hostname + '; path=/';
-    location.reload();
-  }
-</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-<!-- Auto-detect language based on IP (only on first visit) -->
-<script>
-  if (!document.cookie.includes("googtrans")) {
-    fetch("https://ipapi.co/json/")
-      .then(response => response.json())
-      .then(data => {
-        const country = data.country_code;
-
-        const countryLangMap = {
-          FR: "fr",
-          ES: "es",
-          DE: "de",
-          IT: "it",
-          NL: "nl",
-          SE: "sv",
-          GR: "el",
-          DEFAULT: "en"
-        };
-
-        const lang = countryLangMap[country] || countryLangMap.DEFAULT;
-        const cookieValue = "/en/" + lang;
-
-        document.cookie = `googtrans=${cookieValue}; path=/`;
-        document.cookie = `googtrans=${cookieValue}; domain=${location.hostname}; path=/`;
-
-        location.reload();
-      })
-      .catch(error => {
-        console.error("IP geolocation failed:", error);
-      });
-  }
-</script>
-  </head>
-
-  <body class="bg-gray-50 text-gray-800">
-    <div id="google_translate_element" style="display: none;"></div>
+    // Manual dropdown → set cookie & reload
+    function setLanguage(langPair) {
+      if (!langPair) return;
+      const [, to] = langPair.split('|');
+      const cookieValue = `/en/${to}`;
+      document.cookie = `googtrans=${cookieValue};domain=.exitmytimeshares.com;path=/`;
+      // reload so Google sees the new cookie
+      location.reload();
+    }
   
-    <!-- Header -->
+    // On first visit, auto-detect via IP and set cookie
+    (function(){
+      if (!document.cookie.includes("googtrans=")) {
+        fetch("https://ipapi.co/json/")
+          .then(res => res.json())
+          .then(data => {
+            const map = { FR: "fr", ES: "es", DE: "de", IT: "it", NL: "nl", SE: "sv", GR: "el" };
+            const lang = map[data.country_code] || "en";
+            const cookieValue = `/en/${lang}`;
+            document.cookie = `googtrans=${cookieValue};domain=.exitmytimeshares.com;path=/`;
+            location.reload();
+          })
+          .catch(err => console.error("IP geolocation failed:", err));
+      }
+    })();
+  </script>
+
+  <!-- jsPDF (if needed elsewhere) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  <!-- 4) Google Translate engine init (in the head) -->
+  <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,fr,es,de,nl,it,sv,el',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element');
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
+
+<body class="bg-gray-50 text-gray-800">
+    <!-- 5) Invisible Google translate engine target -->
+    <div id="google_translate_element" style="display:none;"></div>
+
+    <!-- 6) Header + Language dropdown -->
     <header class="bg-white shadow">
       <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="/">
-          <img src="images/quaerens-logo.png" alt="Quaerens Logo" class="h-20 w-auto">
-        </a>
-        <nav>
-
-          <div class="w-full bg-gray-100 text-right p-2">
-            <div x-data="{ open: false }" class="relative inline-block text-left">
-              <button @click="open = !open"
-                      class="inline-flex items-center justify-center rounded border border-gray-300 px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-100 focus:outline-none">
-                🌐 Language
-                <svg class="ml-2 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8l5 5 5-5" />
-                </svg>
-              </button>
-          
-              <div x-show="open" @click.outside="open = false"
-                   class="absolute right-0 mt-2 w-48 rounded-md shadow bg-white text-sm text-gray-700 z-50">
-                <a href="#" onclick="setLanguage('en|en')" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
-                <a href="#" onclick="setLanguage('en|fr')" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
-                <a href="#" onclick="setLanguage('en|es')" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
-                <a href="#" onclick="setLanguage('en|de')" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
-                <a href="#" onclick="setLanguage('en|it')" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
-                <a href="#" onclick="setLanguage('en|nl')" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
-                <a href="#" onclick="setLanguage('en|sv')" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
-                <a href="#" onclick="setLanguage('en|el')" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
-              </div>
-            </div>
+        <a href="/"><img src="images/quaerens-logo.png" alt="Logo" class="h-20"></a>
+        <div x-data="{ open: false }" class="relative">
+          <button @click="open = !open"
+                  class="inline-flex items-center px-4 py-2 border rounded bg-white hover:bg-gray-100">
+            🌐 Language
+            <svg class="ml-2 h-4 w-4" fill="none" viewBox="0 0 20 20" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M5 8l5 5 5-5" />
+            </svg>
+          </button>
+          <div x-show="open" @click.outside="open = false"
+               class="absolute right-0 mt-2 w-48 bg-white rounded shadow z-50">
+            <a href="#" @click.prevent="setLanguage('en|en')" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
+            <a href="#" @click.prevent="setLanguage('en|fr')" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
+            <a href="#" @click.prevent="setLanguage('en|es')" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
+            <a href="#" @click.prevent="setLanguage('en|de')" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
+            <a href="#" @click.prevent="setLanguage('en|it')" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
+            <a href="#" @click.prevent="setLanguage('en|nl')" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
+            <a href="#" @click.prevent="setLanguage('en|sv')" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
+            <a href="#" @click.prevent="setLanguage('en|el')" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
           </div>
-        </nav>
+        </div>
       </div>
     </header>
-    
-        <script>
-          document.addEventListener("DOMContentLoaded", function () {
-            const match = document.cookie.match(/googtrans=\/en\/(\w+)/);
-            const lang = match ? match[1] : "en";
-            const selector = document.getElementById("languageDropdown");
-            if (selector) selector.value = `en|${lang}`;
-          });
-        </script>
-        <!-- ✅ Place this OUTSIDE the <header> and NOT inside the <head> either -->
-        <script>
-          document.addEventListener("DOMContentLoaded", function () {
-            const match = document.cookie.match(/googtrans=\/en\/(\w+)/);
-            const lang = match ? match[1] : "en";
-            const selector = document.getElementById("languageDropdown");
-            if (selector) selector.value = `en|${lang}`;
-          });
-        </script>
-
-<!-- Google Translate hidden engine (bottom of page) -->
-<div id="google_translate_element2" style="display: none;"></div>
-
-<script type="text/javascript">
-  function doGTranslate(lang_pair) {
-    if (!lang_pair) return;
-    var lang = lang_pair.split('|')[1];
-    var select = document.querySelector('select.goog-te-combo');
-    if (select && select.options) {
-      select.value = lang;
-      select.dispatchEvent(new Event('change'));
-    }
-  }
-</script>
-
-<script type="text/javascript">
-  function googleTranslateElementInit2() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,fr,es,de,nl,it,sv,el',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-      autoDisplay: false
-    }, 'google_translate_element2');
-  }
-</script>
-
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-</body>
-</html>
-
-  </header>
+  
+    <!-- 3) Google Translate API init -->
+    <script>
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+          pageLanguage: 'en',
+          includedLanguages: 'en,fr,es,de,nl,it,sv,el',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          autoDisplay: false
+        }, 'google_translate_element');
+      }
+    </script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  </body>
+  </html>  
 
 <!-- Hero Section -->
 <section class="relative w-full overflow-hidden">
