Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -391,24 +391,42 @@
     </div>
   </section>  
 
+  <!-- Credibility & Protection Section -->
+<section class="py-16 bg-gray-50">
+    <div class="max-w-4xl mx-auto space-y-12">
+  
       <!-- Secure Checkout -->
-      <h3 class="text-2xl font-bold text-gray-800">Secure Checkout</h3>
-      <p class="text-gray-600 max-w-2xl mx-auto">
-        We use trusted payment partners—pay with Visa or Mastercard and get full protection on your card.
-      </p>
-      <div class="flex justify-center items-center gap-6 mt-4">
-        <img src="/images/badge-visa.png" alt="Visa accepted" class="h-10"/>
-        <img src="/images/badge-mastercard.png" alt="Mastercard accepted" class="h-10"/>
-        <img src="/images/badge-secure.png" alt="Secure checkout" class="h-10"/>
+      <div class="bg-white p-6 rounded-2xl shadow-md text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-4">Secure Checkout</h3>
+        <p class="text-gray-600 mb-6">Pay with Visa or Mastercard and enjoy full purchase protection on your card.</p>
+        <div class="flex justify-center items-center gap-8">
+          <img src="/images/badge-visa.png" alt="Visa accepted" class="h-10"/>
+          <img src="/images/badge-mastercard.png" alt="Mastercard accepted" class="h-10"/>
+          <img src="/images/badge-secure.png" alt="Secure checkout" class="h-10"/>
+        </div>
       </div>
   
       <!-- Helpful Tips & Warnings -->
-      <h3 class="text-2xl font-bold text-gray-800 mt-12">Helpful Tips & Warnings</h3>
-      <ul class="text-gray-600 list-disc list-inside max-w-2xl mx-auto space-y-2">
-        <li><strong>From ARDA:</strong> You don’t need to pay expensive exit firms—our kit gives you everything to do it yourself.</li>
-        <li><strong>Your Rights in Europe:</strong> Under EU law, you can cancel unfair or unclear contracts, even after the initial period.</li>
-        <li><strong>Stay Safe:</strong> Always get any cancellation promise in writing and never send money to people you haven’t checked.</li>
-      </ul>  
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition">
+          <div class="text-4xl mb-2">📢</div>
+          <h4 class="font-semibold text-lg mb-2">ARDA Advice</h4>
+          <p class="text-gray-600">You don’t need to pay expensive exit firms—our kit gives you everything you need to do it yourself.</p>
+        </div>
+        <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition">
+          <div class="text-4xl mb-2">📜</div>
+          <h4 class="font-semibold text-lg mb-2">Your Rights in Europe</h4>
+          <p class="text-gray-600">Under EU law, you can cancel unfair or unclear contracts—even after the initial cooling-off period.</p>
+        </div>
+        <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition">
+          <div class="text-4xl mb-2">🛡️</div>
+          <h4 class="font-semibold text-lg mb-2">Stay Safe</h4>
+          <p class="text-gray-600">Always get cancellation promises in writing and never send money to unverified companies.</p>
+        </div>
+      </div>
+  
+    </div>
+  </section>  
 
       <!-- Hero Banner Section with Happy Travelers -->
       <section class="w-full mt-8">
