Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -361,46 +361,52 @@
 </section>   <!-- ← end of How It Works -->
 
 <!-- FAQ: answer common concerns in plain English -->
-<section id="faq" class="py-8 bg-white">
+<section id="faq" class="py-12 bg-white">
     <div class="max-w-4xl mx-auto px-4">
-      <h3 class="text-2xl font-bold mb-4 text-center">Frequently Asked Questions</h3>
-      <div x-data="{ open: null }" class="space-y-4">
-        <div>
-          <button
-            @click="open === 1 ? open = null : open = 1"
-            class="w-full text-left font-semibold py-2">
-            What if my resort refuses to cancel?
-            <span class="float-right" x-text="open === 1 ? '−' : '+'"></span>
-          </button>
-          <div x-show="open === 1" x-collapse class="pl-4 text-gray-600">
-            Our templates include follow-up letters and escalation advice—if needed, you can upgrade to full-service support.
+      <h3 class="text-2xl font-bold mb-8 text-center">Frequently Asked Questions</h3>
+  
+      <div class="space-y-6">
+        <!-- Q1 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <div class="flex items-start gap-3">
+            <div class="text-2xl">❓</div>
+            <div>
+              <p class="font-semibold text-gray-800 mb-2">What if my resort refuses to cancel?</p>
+              <p class="text-gray-600">
+                Our kit includes follow-up letters and escalation tips. And if you need more help, you can always upgrade to our full-service support.
+              </p>
+            </div>
           </div>
         </div>
-        <div>
-          <button
-            @click="open === 2 ? open = null : open = 2"
-            class="w-full text-left font-semibold py-2">
-            Can I get a refund if it fails?
-            <span class="float-right" x-text="open === 2 ? '−' : '+'"></span>
-          </button>
-          <div x-show="open === 2" x-collapse class="pl-4 text-gray-600">
-            Yes—if our kit doesn’t help you exit, you’re covered by our no-questions-asked refund guarantee.
+  
+        <!-- Q2 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <div class="flex items-start gap-3">
+            <div class="text-2xl">💰</div>
+            <div>
+              <p class="font-semibold text-gray-800 mb-2">Can I get a refund if it fails?</p>
+              <p class="text-gray-600">
+                Absolutely—if our kit doesn’t help you exit, you’re covered by our no-questions-asked, full refund guarantee.
+              </p>
+            </div>
           </div>
         </div>
-        <div>
-          <button
-            @click="open === 3 ? open = null : open = 3"
-            class="w-full text-left font-semibold py-2">
-            How long does it take?
-            <span class="float-right" x-text="open === 3 ? '−' : '+'"></span>
-          </button>
-          <div x-show="open === 3" x-collapse class="pl-4 text-gray-600">
-            Most clients finish the process in 3–6 weeks from the day you send your letter—no back-and-forth required.
+  
+        <!-- Q3 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <div class="flex items-start gap-3">
+            <div class="text-2xl">⏱️</div>
+            <div>
+              <p class="font-semibold text-gray-800 mb-2">How long does it take?</p>
+              <p class="text-gray-600">
+                Most clients complete the process in <strong>3–6 weeks</strong> from the day you send your letter—no lengthy back-and-forth required.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </section>  
+  </section>   
    
 <!-- Quick Highlights -->
 <section class="py-12 bg-blue-50">
@@ -561,7 +567,7 @@
   <!-- Mini success story for social proof -->
   <div class="max-w-4xl mx-auto px-4 mt-6 text-center">
     <p class="italic text-gray-700">
-      “I saved over €3 000 and exited my timeshare in just 3 weeks using this kit!” – Mary S., Spain
+      “I saved over €3 000 and exited my timeshare in just 3 weeks using this kit!” – Mary S., United Kingdom
     </p>
   </div>
     
